# onto2robot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ontologies/: cora.owl  coraX.owl  mobile_robot_ontology.owl  sumo.owl  tests.owl
src/onto2robot/: __init__.py  cli.py  core.py  fs_wrapper.py  scikit_fuzz_wrapper.py
tests/: KB.xlsx  test_core.py  test_scikit.py
utils/: xslxkb.py
