[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "onto2robot"
version = "0.1.0"
description = "Ontology to robot utilities"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["ontology", "robotics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
# Project runtime dependencies (empty for now)
dependencies = []

[project.scripts]
onto2robot = "onto2robot.cli:main"

[dependency-groups]
# Dev dependencies installed with `uv sync --dev`
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.9",
  "pre-commit>=3.8.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
# Apply to project code and tests using src layout
src = ["src", "tests"]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort (import order)
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
# Use Ruff formatter (Black-compatible)
quote-style = "double"
indent-style = "space"
line-ending = "lf"
