[build-system]
#Required by uv
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "onto2robot"
version = "0.0.1"
description = "The framework to convert the ontologies stack to the robot-controller code."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Piotr Macioł", email = "piotrmaciol@gmail.com" }]
keywords = ["ontology", "robotics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# lark and setuptools are required by simpful, but not recognized automatically:
dependencies = [
  "simpful>=2.12.0",
  "lark>=1.3.1",
  "setuptools>=80.9.0",
  "owlready2>=0.48",
]

[project.scripts]
onto2robot = "onto2robot.cli:main"

[dependency-groups]
# Dev dependencies installed with `uv sync --dev`
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6.9", "pre-commit>=3.8.0"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
src = ["src", "tests"]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort (import order)
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
]
ignore = []
unfixable = ["F401"]

[tool.ruff.format]
